Fix AddressBook GUI Set a minimal size for the screen at 1000px by 600px Updated minimal size for each Student/Teacher card so they won't need the horizontal scroll bar Fixed GUI to account for super long tags Changed Tags to fill vertically compared to horizontally

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -365,6 +365,8 @@
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+    -fx-wrap-text: true;
+    -fx-max-width: 85;
 }
 
 #formClass {
